# docs/swagger.json
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/u/profile": {
+        "/u/profile/{username}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -131,13 +131,19 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/utils.ModelResponse"
                         }
                     }
                 }
@@ -179,15 +185,38 @@
         "controller.RegisterInput": {
             "type": "object",
             "required": [
+                "age",
+                "country",
                 "email",
+                "firstname",
+                "lastname",
                 "password",
+                "sex",
                 "username"
             ],
             "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "country": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
+                "firstname": {
+                    "type": "string"
+                },
+                "hobbies": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
                 "password": {
+                    "type": "string"
+                },
+                "sex": {
                     "type": "string"
                 },
                 "username": {
@@ -195,10 +224,10 @@
                 }
             }
         },
-        "utils.MessageResponse": {
+        "utils.ModelResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "Model fields": {
                     "type": "string"
                 }
             }
