# models/user.go
@@ -7,18 +7,20 @@ import (
 
 type User struct {
 	gorm.Model
-	ID       int    `json:"id" gorm:"primary_key"`
-	Username string `json:"name" gorm:"unique"`
-	Email    string `json:"email"`
-	Password string `json:"-"`
-	Sex      string `json:"sex"`
-	Age      uint8  `json:"age"`
-	Country  string `json:"country"`
-	Location string `json:"location"`
-	Role     string `json:"role"`
-	Bio      string `json:"bio"`
-	Hobbies  []string `json:"hobbies"`
-	Photos   []Photo `json:"photos" gorm:"foreignKey:UserID"`
+	ID        int     `json:"id" gorm:"primary_key"`
+	Username  string  `json:"name" gorm:"unique"`
+	Email     string  `json:"email"`
+	Password  string  `json:"-"`
+	Firstname string  `json:"firstname"`
+	Lastname  string  `json:"lastname"`
+	Sex       string  `json:"sex"`
+	Age       uint8   `json:"age"`
+	Country   string  `json:"country"`
+	Location  string  `json:"location"`
+	Role      string  `json:"role"`
+	Bio       string  `json:"bio"`
+	Hobbies   string  `json:"hobbies"`
+	Photos    []Photo `json:"photos" gorm:"foreignKey:UserID"`
 }
 
 func (u *User) HashPassword(password string) error {
@@ -36,8 +38,7 @@ func (u *User) CheckPassword(password string) error {
 
 type Photo struct {
 	gorm.Model
-	UserID uint `gorm:"index"`
-	URL string `json:"url"`
-	IsPreview bool `json:"isPreview"`
+	UserID    uint   `gorm:"index"`
+	URL       string `json:"url"`
+	IsPreview bool   `json:"isPreview"`
 }
-
